# game_of_life

./: .gitignore  Cargo.toml  README.md  builds.txt
src/: game_of_life.rs  game_of_life_plugin.rs  lib.rs  main.rs  ui.rs
