[package]
name = "game_of_life_bevy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
bevy = { version = "0.11.2", features = ["dynamic_linking"]}



[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/game_of_life.rs"
